fix front on mobile screen

--- a/movies/static/movies/css/base.css
+++ b/movies/static/movies/css/base.css
@@ -193,7 +193,7 @@ ul li:hover .dropOut {
 }
 
 .btn-search {
-    top: 1.25rem;
+    top: 1.3rem;
     right: 2.5rem;
 }
 
