--- a/movies/static/movies/css/slider-index.css
+++ b/movies/static/movies/css/slider-index.css
@@ -116,7 +116,7 @@
   height: 100%;
   right: 0;
   background-size: cover;
-  background-repeat: round;
+  background-repeat: no-repeat;
   background-origin: border-box;
   border-radius: 11px;
 }
